.graveyard/control/tests/it/snapshots/it__builds__create_test.snap
---
source: crates/control/tests/it/builds.rs
assertion_line: 52
expression: redactor.response_json(&mut response).await.unwrap()
---
{
  "data": {
    "attributes": {
      "account_id": "[a1]",
      "catalog": {
        "collections": {
          "acmeCo/collection": {
            "key": [
              "/key"
            ],
            "schema": {
              "properties": {
                "key": {
                  "type": "integer"
                }
              },
              "required": "key",
              "type": "object"
            }
          }
        }
      },
      "created_at": "[datetime]",
      "id": "[b1]",
      "state": {
        "type": "queued"
      },
      "updated_at": "[datetime]"
    },
    "id": "[b1]",
    "links": {
      "self": "http://127.0.0.1:0/builds/[b1]"
    },
    "type": "build"
  }
}
