.graveyard/control/tests/it/snapshots/it__builds__index_test.snap
---
source: crates/control/tests/it/builds.rs
assertion_line: 25
expression: redactor.response_json(&mut response).await.unwrap()
---
{
  "data": [
    {
      "attributes": {
        "account_id": "[account<batman>]",
        "catalog": null,
        "created_at": "[datetime]",
        "id": "[build<batman>]",
        "state": {
          "type": "queued"
        },
        "updated_at": "[datetime]"
      },
      "id": "[build<batman>]",
      "links": {
        "self": "http://127.0.0.1:0/builds/[build<batman>]"
      },
      "type": "build"
    }
  ],
  "links": {
    "self": "http://127.0.0.1:0/builds"
  }
}
